--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -1,6 +1,5 @@
-greenCity.validation.invalid.restore.email.address=Must be a well-formed email address
 greenCity.validation.invalid.email=The email is invalid
-greenCity.validation.invalid.password=Password has contain at least one character of Uppercase letter (A-Z), Lowercase letter (a-z), Digit (0-9), Special character (~`!@#$%^&*()+=_-{}[]|:;”’?/<>,.)
+greenCity.validation.invalid.password=Password has contain at least one character of Uppercase letter (A-Z), Lowercase letter (a-z), Digit (0-9), Special character (~`!@#$%^&*()+=_-{}[]|:;\\”\\’?/<>,.)
 
 greenCity.validation.negative.id=The id should be positive number
 
