--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -38,3 +38,200 @@ greenCity.validation.bad.comma.separated.numbers=Non-empty string can contain nu
 greenCity.validation.user.created=User was created. Verification letter has been sent to your email address
 
 greenCity.validation.empty.tags=At least one tag
+
+/*headerforall*/
+greenCity.current.language=En
+
+/*forallpages*/
+
+greenCity.pages.search=Search
+greenCity.pages.delete=Delete
+greenCity.pages.edit=Edit
+greenCity.pages.table.id=ID
+greenCity.pages.table.habit.id=Habit ID
+greenCity.pages.table.actions=Actions
+greenCity.pages.table.content=Content
+greenCity.pages.table.translations=Translations
+greenCity.pages.table.translation.id=TranslationID
+greenCity.pages.table.language.code=LanguageCode
+greenCity.pages.table.fact.of.day.status=Fact of day status
+greenCity.pages.table.language.id=Language ID
+greenCity.pages.table.achievement.category=Achievement Category
+greenCity.pages.table.condition=Condition
+greenCity.pages.table.title=Title
+greenCity.pages.table.description=Description
+greenCity.pages.table.message=Message
+greenCity.pages.table.author=Author
+greenCity.pages.table.text=Text
+greenCity.pages.table.image=Image
+greenCity.pages.table.date=Date
+greenCity.pages.table.tags=Tags
+greenCity.pages.table.title.translations=Title Translations
+greenCity.pages.table.image.path=Image Path
+greenCity.pages.table.creation.date=Creation Date
+greenCity.pages.table.source=Source
+greenCity.pages.table.userName=User Name
+greenCity.pages.table.email=Email
+greenCity.pages.table.credo=Credo
+greenCity.pages.table.role=Role
+greenCity.pages.table.status=Status
+greenCity.pages.table.name=Name
+greenCity.pages.table.habit.item=Habit Item
+greenCity.pages.table.image.upload=Image Upload
+greenCity.pages.table.lang=Lang
+greenCity.pages.table.event.name=Event Name
+greenCity.pages.table.user.id=User ID
+greenCity.pages.table.user.email=User Email
+greenCity.pages.table.points.changed=Points Changed
+greenCity.pages.table.current.rating=Current Rating
+greenCity.pages.table.address=Address
+greenCity.pages.table.place.name=Place Name
+greenCity.pages.table.category=Category
+greenCity.pages.table.opening.hours=Opening Hours
+greenCity.pages.table.monday=MONDAY
+greenCity.pages.table.tuesday=TUESDAY
+greenCity.pages.table.wednesday=WEDNESDAY
+greenCity.pages.table.thursday=THURSDAY
+greenCity.pages.table.friday=FRIDAY
+greenCity.pages.table.saturday=SATURDAY
+greenCity.pages.table.sunday=SUNDAY
+greenCity.pages.table.start.time=start time
+greenCity.pages.table.end.time=end time
+greenCity.pages.table.add.break.hourse=Add break hours
+greenCity.pages.table.photo=Photo
+greenCity.pages.table.type=Type
+greenCity.pages.table.host.path=Host Path
+greenCity.pages.table.file=File
+greenCity.pages.table.week.day=Week Day
+greenCity.pages.table.open.time=Open Time
+greenCity.pages.table.close.time=Close Time
+greenCity.pages.table.break.start=Break(Start)
+greenCity.pages.table.break.end=Break(End)
+greenCity.pages.table.break.start.p=start break
+greenCity.pages.table.break.end.p=end break
+greenCity.pages.table.delete.break.title=Delete break hours
+greenCity.pages.table.delete.add.discount=Add Discount
+
+greenCity.pages.popup.delete.all.h=Delete all selected
+greenCity.pages.popup.delete.all.h1=Are you sure you want to delete these Records?
+greenCity.pages.popup.delete.all.h2=This action cannot be undone.
+
+greenCity.pages.popup.delete.h2=Are you sure you want to delete this Records?
+greenCity.pages.popup.language.code=Language Code
+
+greenCity.pages.popup.cancel.=Cancel
+greenCity.pages.popup.add.=Add
+greenCity.pages.popup.save.=Save
+
+/*paginationpages*/
+greenCity.page.paging.show=Showing
+greenCity.page.paging.out.of=out of
+greenCity.page.paging.entries=entries
+greenCity.page.paging.previous=Previous
+greenCity.page.paging.next=Next
+
+/*indexpage*/
+greenCity.index.page.h=Welcome to management page
+
+/*advisespage*/
+greenCity.advices.page.h=Manage Advice
+greenCity.advices.page.add.advice=Add Advice
+greenCity.advices.page.edit.advice=Edit Advice
+greenCity.advices.page.delete.advice=Delete Advice
+
+/*achievementpage*/
+greenCity.achievement.page.h=Manage Achievement
+greenCity.achievement.page.add.achievement=Add Achievement
+greenCity.achievement.page.edit.achievement=Edit Achievement
+greenCity.achievement.page.delete.achievement=Delete Achievement
+
+/*econewspage*/
+greenCity.econews.page.h=Manage Eco News
+greenCity.econews.page.add.eco.news=Add Eco News
+greenCity.econews.page.delete.eco.news=Delete Eco News
+greenCity.econews.page.edit.eco.news=Edit Eco News
+
+/*tip&trickspage*/
+greenCity.tips.tricks.page.h=Manage Tips & tricks
+greenCity.tips.tricks.page.add.tips.tricks=Add Tips&Tricks
+greenCity.tips.tricks.page.delete.tips.tricks=Delete Tips&Tricks
+greenCity.tips.tricks.page.edit.tips.tricks=Edit Tips&Tricks
+
+/*userspage*/
+greenCity.user.page.h=Manager Page
+greenCity.user.page.add.user=Add User
+greenCity.user.page.deactivated=Deactivated
+
+greenCity.user.page.popup.activated.h=Activate User
+greenCity.user.page.popup.activated.p1=Are you sure you want to set User's status to ACTIVATED?
+greenCity.user.page.popup.activated.p2=This user will be able to login again.
+greenCity.user.page.popup.activated.div=Activate
+
+greenCity.user.page.popup.deactivated.h=Deactivate User
+greenCity.user.page.popup.deactivated.p1=If you intend to Deactivate User, you have to specify one more reason to do it:
+greenCity.user.page.popup.deactivated.fieldset.input=inappropriate credo content in profile
+greenCity.user.page.popup.deactivated.fieldset.input1=inappropriate behavior in news publications
+greenCity.user.page.popup.deactivated.fieldset.input2=other
+
+greenCity.user.page.popup.deactivated.all.p1=Are you sure you want to deactivate these Users?
+greenCity.user.page.popup.deactivated.all.div=Deactivate marked
+
+/*habitpage*/
+greenCity.habit.page.h=Manage Habit
+greenCity.habit.page.add.habit=Add Habit
+greenCity.habit.page.delete.habit=Delete Habit
+greenCity.habit.page.edit.habit=Edit Habit
+
+/*habitfactspage*/
+greenCity.habit.facts.page.h=Manage Habit Facts
+greenCity.habit.facts.page.add.habit.facts=Add Habit Facts
+greenCity.habit.facts.page.delete.habit.facts=Delete Habit Facts
+greenCity.habit.facts.page.edit.habit.facts=Edit Habit Facts
+
+/*factsratingpage*/
+greenCity.facts.rating.page.h=Manage User Rating Statistics
+greenCity.facts.rating.page.export.all=Export all to Excel
+greenCity.facts.rating.page.export.filtered=Export filtered to Excel
+greenCity.facts.rating.page.clear=Clear filters
+
+/*placespage*/
+greenCity.places.page.h=Manage Place
+greenCity.places.page.add.place=Add Place
+greenCity.places.page.add.break.hours=Add break hours
+greenCity.places.page.add.discount=Add Discount
+greenCity.places.page.delete=Delete Place
+
+/*tagspage*/
+greenCity.tags.page.h=Manage Tags
+greenCity.places.page.add.tag=Add Tag
+greenCity.places.page.edit.tag=Edit Tag
+greenCity.places.page.delete.tag=Delete Tag
+
+/*socialnetworkimagespage*/
+greenCity.social.page.h=Manage Social network images
+greenCity.social.page.add.social=Add Social News
+greenCity.social.page.edit.social=Edit Social News
+greenCity.social.page.delete.social=Delete Social Network Images
+
+
+/*goalpage*/
+greenCity.goal.page.h=Manage Goal
+greenCity.goal.page.add.goal=Add Goal
+greenCity.goal.page.edit.goal=Edit Goal
+greenCity.goal.page.delete.goal=Delete Goal
+
+/*footerpages*/
+greenCity.page.footer.advices=Advices
+greenCity.page.footer.achievement=Achievement
+greenCity.page.footer.eco.news=Eco news
+greenCity.page.footer.tips.tricks=Tips & Tricks
+greenCity.page.footer.fact.of.the.day=Fact of the day
+greenCity.page.footer.users=Users
+greenCity.page.footer.habits=Habits
+greenCity.page.footer.habit.facts=Habit Facts
+greenCity.page.footer.facts.rating=Facts Rating
+greenCity.page.footer.places=Places
+greenCity.page.footer.tags=Tags
+greenCity.page.footer.social.network.images=Social network images
+greenCity.page.footer.goals=Goals
+
