update_activate_and_deactivate_popups

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -163,7 +163,8 @@ greenCity.user.page.add.user=Add User
 greenCity.user.page.deactivated=Deactivated
 
 greenCity.user.page.popup.activated.h=Activate User
-greenCity.user.page.popup.activated.p1=Are you sure you want to set User's status to ACTIVATED?
+greenCity.user.page.popup.activated.p1=Are you sure you want to Activate User? The reasons of deactivation for the Deactivation 
+greenCity.user.page.popup.activated.p1.was=was:
 greenCity.user.page.popup.activated.p2=This user will be able to login again.
 greenCity.user.page.popup.activated.div=Activate
 
