created sidebar in management

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -251,3 +251,30 @@ greenCity.habitShoppingListItem.page.translation.content.shoppingListItem=Conten
 greenCity.habitShoppingListItem.page.translation.code.shoppingListItem=LanguageCode
 greenCity.habitShoppingListItem.page.translation.shoppingListItem=Translations
 greenCity.habitShoppingListItem.page.actions=Actions
+
+/*sidebar*/
+greenCity.sidebar.users=Users
+greenCity.sidebar.habits=Habits
+greenCity.sidebar.habits.all=All Habits
+greenCity.sidebar.habits.facts=Habit's Facts
+greenCity.sidebar.habits.advice=Habit's Advice
+greenCity.sidebar.habits.shoppingList=Shopping List 
+greenCity.sidebar.econews=Eco News
+greenCity.sidebar.tags=Tags
+greenCity.sidebar.tipsAndTricks=Tips & Tricks
+greenCity.sidebar.ecoPlaces=Eco Places
+greenCity.sidebar.ratings=Ratings
+greenCity.sidebar.ratings.all=All Ratings
+greenCity.sidebar.ratings.calculation.setup=Rating Calculation Setup
+greenCity.sidebar.socialNetworksImagines=Social Networks Imagines
+greenCity.sidebar.achievements=Achievements
+greenCity.sidebar.achievements.all=All Achievements
+greenCity.sidebar.achievements.setup=Achievements Setup
+greenCity.sidebar.factsOfTheDay=Facts of the Day
+greenCity.sidebar.statistics=Statistics Dashboard
+greenCity.sidebar.statistics.users=Users Statistic
+greenCity.sidebar.statistics.habits=Habits Statistic
+greenCity.sidebar.statistics.ecoNews=Eco News Statistic
+greenCity.sidebar.statistics.ecoPlaces=Eco Places Statistic
+greenCity.sidebar.statistics.achievements=Achievements Statistic
+greenCity.sidebar.statistics.tags=Tags statistic of Entities
