--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -246,3 +246,30 @@ greenCity.habitShoppingListItem.page.translation.content.shoppingListItem=\u0417
 greenCity.habitShoppingListItem.page.translation.code.shoppingListItem=\u041a\u043e\u0434\u0020\u043c\u043e\u0432\u0438
 greenCity.habitShoppingListItem.page.translation.shoppingListItem=\u041f\u0435\u0440\u0435\u043a\u043b\u0430\u0434\u0438
 greenCity.habitShoppingListItem.page.actions=\u0414\u0456\u0457
+
+/*sidebar*/
+greenCity.sidebar.users=\u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
+greenCity.sidebar.habits=\u0417\u0432\u0438\u0447\u043a\u0438
+greenCity.sidebar.habits.all=\u0412\u0441\u0456 \u0417\u0432\u0438\u0447\u043a\u0438
+greenCity.sidebar.habits.facts=\u0424\u0430\u043a\u0442\u0438 \u043f\u0440\u043e \u0417\u0432\u0438\u0447\u043a\u0443
+greenCity.sidebar.habits.advice=\u041f\u043e\u0440\u0430\u0434\u0438 \u0449\u043e\u0434\u043e \u0417\u0432\u0438\u0447\u043a\u0438
+greenCity.sidebar.habits.shoppingList=\u0421\u043f\u0438\u0441\u043e\u043a \u041f\u043e\u043a\u0443\u043f\u043e\u043a
+greenCity.sidebar.econews=\u0415\u043a\u043e \u041d\u043e\u0432\u0438\u043d\u0438
+greenCity.sidebar.tags=\u0422\u0435\u0433\u0438
+greenCity.sidebar.tipsAndTricks=\u041f\u043e\u0440\u0430\u0434\u0438 \u0026 \u041f\u0456\u0434\u043a\u0430\u0437\u043a\u0438
+greenCity.sidebar.ecoPlaces=\u0415\u043a\u043e \u041c\u0456\u0441\u0446\u044f
+greenCity.sidebar.ratings=\u0420\u0435\u0439\u0442\u0438\u043d\u0433\u0438
+greenCity.sidebar.ratings.all=\u0412\u0441\u0456 \u0420\u0435\u0439\u0442\u0438\u043d\u0433\u0438
+greenCity.sidebar.ratings.calculation.setup=\u041d\u0430\u043b\u0430\u0448\u0442\u0443\u0432\u0430\u043d\u043d\u044f
+greenCity.sidebar.socialNetworksImagines=\u0417\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u043d\u044f \u0421\u043e\u0446\u043c\u0435\u0440\u0435\u0436
+greenCity.sidebar.achievements=\u0414\u043e\u0441\u044f\u0433\u043d\u0435\u043d\u043d\u044f
+greenCity.sidebar.achievements.all=\u0412\u0441\u0456 \u0414\u043e\u0441\u044f\u0433\u043d\u0435\u043d\u043d\u044f
+greenCity.sidebar.achievements.setup=\u041d\u0430\u043b\u0430\u0448\u0442\u0443\u0432\u0430\u043d\u043d\u044f \u0414\u043e\u0441\u044f\u0433\u043d\u0435\u043d\u044c
+greenCity.sidebar.factsOfTheDay=\u0424\u0430\u043a\u0442\u0438 \u0414\u043d\u044f
+greenCity.sidebar.statistics=\u041f\u0430\u043d\u0435\u043b\u044c \u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\u0438
+greenCity.sidebar.statistics.users=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\u0430 \u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432
+greenCity.sidebar.statistics.habits=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\u0430 \u0417\u0432\u0438\u0447\u043e\u043a
+greenCity.sidebar.statistics.ecoNews=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\u0430 \u0415\u043a\u043e\u002d\u043d\u043e\u0432\u0438\u043d
+greenCity.sidebar.statistics.ecoPlaces=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\u0430 \u0415\u043a\u043e\u002d\u043c\u0456\u0441\u0446\u044c
+greenCity.sidebar.statistics.achievements=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\u0430 \u0414\u043e\u0441\u044f\u0433\u043d\u0435\u043d\u044c
+greenCity.sidebar.statistics.tags=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\u0430 \u0422\u0435\u0433\u0456\u0432 \u0421\u0443\u0442\u043d\u043e\u0441\u0442\u0435\u0439
