New management_user design, new icons, scripts and translations.

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -45,6 +45,7 @@ greenCity.current.language=En
 /*forallpages*/
 
 greenCity.pages.search=Search
+greenCity.pages.filter=Filter
 greenCity.pages.delete=Delete
 greenCity.pages.edit=Edit
 greenCity.pages.table.id=ID
