--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -43,6 +43,7 @@ greenCity.current.language=\u0055\u0061
 
 /*forallpages*/
 greenCity.pages.search=\u0428\u0443\u043a\u0430\u0442\u0438
+greenCity.pages.filter=\u0424\u0456\u043b\u044c\u0442\u0440
 greenCity.pages.edit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
 greenCity.pages.delete=\u0412\u0438\u0434\u0430\u043b\u0438\u0442\u0438
 greenCity.pages.table.id=\u0049\u0044
