--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -27,6 +27,8 @@ greenCity.validation.max.lng=Has to be lower or equals 180
 greenCity.validation.min.rate=The rate must be at least {value}
 greenCity.validation.max.rate=The rate must bigger than {min} and less then {max}
 
+greenCity.validation.habit.complexity=The habit's complexity must be between 1 and 3
+
 greenCity.validation.invalid.discount.value=Min discount value is {min}, max discount value is {max}
 
 greenCity.validation.bad.photo.request=Length of photos list can not be more than {max}
@@ -79,7 +81,10 @@ greenCity.pages.table.status=Status
 greenCity.pages.table.name=Name
 greenCity.pages.table.habit.item=Habit Item
 greenCity.pages.table.image.upload=Image Upload
+greenCity.pages.table.icon=Icon
 greenCity.pages.table.lang=Lang
+greenCity.pages.table.complexity=Complexity
+greenCity.pages.table.connection=Connection
 greenCity.pages.table.event.name=Event Name
 greenCity.pages.table.user.id=User ID
 greenCity.pages.table.user.email=User Email
