--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -13,6 +13,7 @@ greenCity.validation.max.latitude=\u0417\u043d\u0430\u0447\u0435\u043d\u043d\u04
 greenCity.validation.min.longitude=\u0417\u043d\u0430\u0447\u0435\u043d\u043d\u044f '${validatedValue}' \u043c\u0430\u0454 \u0431\u0443\u0442\u0438 \u043f\u0440\u0438\u043d\u0430\u0439\u043c\u043d\u0456 {value}
 greenCity.validation.max.longitude=\u0417\u043d\u0430\u0447\u0435\u043d\u043d\u044f '${validatedValue}' \u043c\u0430\u0454 \u0431\u0443\u0442\u0438 \u043f\u0440\u0438\u043d\u0430\u0439\u043c\u043d\u0456 {value}
 
+greenCity.validation.habit.complexity=\u0421\u043a\u043b\u0430\u0434\u043d\u0456\u0441\u0442\u044c \u0437\u0432\u0438\u0447\u043a\u0438 \u043f\u043e\u0432\u0438\u043d\u043d\u0430 \u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u0438 \u0432\u0456\u0434 \u0031 \u0434\u043e \u0033
 greenCity.validation.notNull.northEastLat=\u041f\u0456\u0432\u043d\u0456\u0447\u043d\u043e-\u0441\u0445\u0456\u0434\u043d\u0430 \u0448\u0438\u0440\u043e\u0442\u0430 \u043d\u0435 \u043c\u043e\u0436\u0435 \u0431\u0443\u0442\u0438 null
 greenCity.validation.notNull.northEastLng=\u041f\u0456\u0432\u043d\u0456\u0447\u043d\u043e-\u0441\u0445\u0456\u0434\u043d\u0430 \u0434\u043e\u0432\u0433\u043e\u0442\u0430 \u043d\u0435 \u043c\u043e\u0436\u0435 \u0431\u0443\u0442\u0438 null
 greenCity.validation.notNull.southWestLat=\u041f\u0456\u0432\u0434\u0435\u043d\u043d\u043e-\u0437\u0430\u0445\u0456\u0434\u043d\u0430 \u0448\u0438\u0440\u043e\u0442\u0430 \u043d\u0435 \u043c\u043e\u0436\u0435 \u0431\u0443\u0442\u0438 null
@@ -77,6 +78,9 @@ greenCity.pages.table.name=\u0406\u043c\u0027\u044f
 greenCity.pages.table.habit.item=\u041f\u0440\u0435\u0434\u043c\u0435\u0442\u0020\u0437\u0432\u0438\u0447\u043a\u0438
 greenCity.pages.table.image.upload=\u0417\u0430\u0432\u0430\u043d\u0442\u0430\u0436\u0435\u043d\u0435\u0020\u0437\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u043d\u044f
 greenCity.pages.table.lang=\u041c\u043e\u0432\u0430
+greenCity.pages.table.icon=\u0417\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u043d\u044f
+greenCity.pages.table.complexity=\u0421\u043a\u043b\u0430\u0434\u043d\u0456\u0441\u0442\u044c
+greenCity.pages.table.connection=\u0417\u0432\u0027\u044f\u0437\u043a\u0438
 greenCity.pages.table.event.name=\u041d\u0430\u0437\u0432\u0430\u0020\u041f\u043e\u0434\u0456\u0457
 greenCity.pages.table.user.id=\u0020\u0049\u0044\u0020\u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
 greenCity.pages.table.user.email=\u0415\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u0430\u0020\u0430\u0434\u0440\u0435\u0441\u0430\u0020\u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
