implements some features for habits page

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -63,6 +63,8 @@ greenCity.pages.table.achievement.category=Achievement Category
 greenCity.pages.table.condition=Condition
 greenCity.pages.table.title=Title
 greenCity.pages.table.description=Description
+greenCity.pages.table.duration=Duration
+greenCity.pages.table.users.language=Users language:
 greenCity.pages.table.message=Message
 greenCity.pages.table.author=Author
 greenCity.pages.table.text=Text
@@ -128,6 +130,7 @@ greenCity.pages.popup.language.code=Language Code
 greenCity.pages.popup.cancel.=Cancel
 greenCity.pages.popup.add.=Add
 greenCity.pages.popup.save.=Save
+greenCity.pages.popup.save.changes=Save changes
 
 /*paginationpages*/
 greenCity.page.paging.show=Showing
