--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -59,6 +59,8 @@ greenCity.pages.table.achievement.category=\u041a\u0430\u0442\u0435\u0433\u043e\
 greenCity.pages.table.condition=\u0421\u0442\u0430\u043d
 greenCity.pages.table.title=\u0417\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a
 greenCity.pages.table.description=\u041e\u043f\u0438\u0441
+greenCity.pages.table.duration=\u0422\u0440\u0438\u0432\u0430\u043b\u0456\u0441\u0442\u044c 
+greenCity.pages.table.users.language=\u041c\u043e\u0432\u0430 \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432\u003a
 greenCity.pages.table.message=\u041f\u043e\u0432\u0456\u0434\u043e\u043c\u043b\u0435\u043d\u043d\u044f
 greenCity.pages.table.author=\u0410\u0432\u0442\u043e\u0440
 greenCity.pages.table.text=\u0422\u0435\u043a\u0441\u0442
@@ -123,6 +125,7 @@ greenCity.pages.popup.language.code=\u041a\u043e\u0434\u0020\u043c\u043e\u0432\u
 greenCity.pages.popup.cancel.=\u0421\u043a\u0430\u0441\u0443\u0432\u0430\u0442\u0438
 greenCity.pages.popup.add.=\u0414\u043e\u0434\u0430\u0442\u0438
 greenCity.pages.popup.save.=\u0417\u0431\u0435\u0440\u0435\u0433\u0442\u0438
+greenCity.pages.popup.save.changes=\u0053\u0061\u0076\u0065 \u0063\u0068\u0061\u006e\u0067\u0065\u0073
 
 /*paginationpages*/
 greenCity.page.paging.show=\u041f\u043e\u043a\u0430\u0437\u0430\u043d\u043e
