add validation and translations for complexity and default duration.

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 greenCity.validation.invalid.email=The email is invalid
-greenCity.validation.invalid.password=Password has contain at least one character of Uppercase letter (A-Z), Lowercase letter (a-z), Digit (0-9), Special character (~`!@#$%^&*()+=_-{}[]|:;\\”\\’?/<>,.)
+greenCity.validation.invalid.password=Password has contain at least one character of Uppercase letter (A-Z), Lowercase letter (a-z), Digit (0-9), Special character (~`!@#$%^&*()+=_-{}[]|:;\\ï¿½\\ï¿½?/<>,.)
 greenCity.validation.invalid.username=Username must not contains a dot at the beginning, few dots in a row, special characters, Cyrillic letters
 
 greenCity.validation.negative.id=The id should be positive number
@@ -64,6 +64,7 @@ greenCity.pages.table.condition=Condition
 greenCity.pages.table.title=Title
 greenCity.pages.table.description=Description
 greenCity.pages.table.duration=Duration
+greenCity.pages.table.default.duration=Default duration
 greenCity.pages.table.users.language=Users language:
 greenCity.pages.table.message=Message
 greenCity.pages.table.author=Author
