--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -60,6 +60,7 @@ greenCity.pages.table.condition=\u0421\u0442\u0430\u043d
 greenCity.pages.table.title=\u0417\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a
 greenCity.pages.table.description=\u041e\u043f\u0438\u0441
 greenCity.pages.table.duration=\u0422\u0440\u0438\u0432\u0430\u043b\u0456\u0441\u0442\u044c 
+greenCity.pages.table.default.duration=\u0422\u0440\u0438\u0432\u0430\u043b\u0456\u0441\u0442\u044c \u0437\u0430 \u0437\u0430\u043c\u043e\u0432\u0447\u0443\u0432\u0430\u043d\u043d\u044f\u043c
 greenCity.pages.table.users.language=\u041c\u043e\u0432\u0430 \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432\u003a
 greenCity.pages.table.message=\u041f\u043e\u0432\u0456\u0434\u043e\u043c\u043b\u0435\u043d\u043d\u044f
 greenCity.pages.table.author=\u0410\u0432\u0442\u043e\u0440
