user personal page created

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -28,28 +28,21 @@ greenCity.validation.min.rate=The rate must be at least {value}
 greenCity.validation.max.rate=The rate must bigger than {min} and less then {max}
 
 greenCity.validation.habit.complexity=The habit's complexity must be between 1 and 3
-
 greenCity.validation.invalid.discount.value=Min discount value is {min}, max discount value is {max}
-
 greenCity.validation.bad.photo.request=Length of photos list can not be more than {max}
 greenCity.validation.bad.openingHoursList=Length of opening hours list can not be less than {min}
 greenCity.validation.bad.discountValues=Length of discount values list can not be less than {min}
-
 greenCity.validation.bad.comma.separated.numbers=Non-empty string can contain numbers separated by a comma only
-
 greenCity.validation.user.created=User was created. Verification letter has been sent to your email address
-
 greenCity.validation.empty.tags=At least one tag
-
 /*headerforall*/
 greenCity.current.language=En
-
 /*forallpages*/
-
 greenCity.pages.search=Search
 greenCity.pages.filter=Filter
 greenCity.pages.delete=Delete
 greenCity.pages.edit=Edit
+greenCity.pages.seeAll=See all
 greenCity.pages.table.id=ID
 greenCity.pages.table.habit.id=Habit ID
 greenCity.pages.table.actions=Actions
@@ -120,72 +113,74 @@ greenCity.pages.table.break.start.p=start break
 greenCity.pages.table.break.end.p=end break
 greenCity.pages.table.delete.break.title=Delete break hours
 greenCity.pages.table.delete.add.discount=Add Discount
-
+greenCity.pages.table.startDate=Start date
+greenCity.pages.table.endDate=End date
+greenCity.pages.table.ready=Ready
+greenCity.pages.table.location=Location
 greenCity.pages.popup.delete.all.h=Delete all selected
 greenCity.pages.popup.delete.all.h1=Are you sure you want to delete these Records?
 greenCity.pages.popup.delete.all.h2=This action cannot be undone.
-
 greenCity.pages.popup.delete.h2=Are you sure you want to delete this Records?
 greenCity.pages.popup.language.code=Language Code
-
 greenCity.pages.popup.cancel.=Cancel
 greenCity.pages.popup.add.=Add
 greenCity.pages.popup.save.=Save
 greenCity.pages.popup.save.changes=Save changes
-
 /*paginationpages*/
 greenCity.page.paging.show=Showing
 greenCity.page.paging.out.of=out of
 greenCity.page.paging.entries=entries
 greenCity.page.paging.previous=Previous
 greenCity.page.paging.next=Next
-
 /*indexpage*/
 greenCity.index.page.h=Welcome to management page
-
 /*advisespage*/
 greenCity.advices.page.h=Manage Advice
 greenCity.advices.page.add.advice=Add Advice
 greenCity.advices.page.edit.advice=Edit Advice
 greenCity.advices.page.delete.advice=Delete Advice
-
 /*achievementpage*/
 greenCity.achievement.page.h=Manage Achievement
 greenCity.achievement.page.add.achievement=Add Achievement
 greenCity.achievement.page.edit.achievement=Edit Achievement
 greenCity.achievement.page.delete.achievement=Delete Achievement
-
 /*econewspage*/
 greenCity.econews.page.h=Manage Eco News
 greenCity.econews.page.add.eco.news=Add Eco News
 greenCity.econews.page.delete.eco.news=Delete Eco News
 greenCity.econews.page.edit.eco.news=Edit Eco News
-
 /*tip&trickspage*/
 greenCity.tips.tricks.page.h=Manage Tips & tricks
 greenCity.tips.tricks.page.add.tips.tricks=Add Tips&Tricks
 greenCity.tips.tricks.page.delete.tips.tricks=Delete Tips&Tricks
 greenCity.tips.tricks.page.edit.tips.tricks=Edit Tips&Tricks
-
 /*userspage*/
 greenCity.user.page.h=Manager Page
 greenCity.user.page.add.user=Add User
 greenCity.user.page.deactivated=Deactivated
-
 greenCity.user.page.popup.activated.h=Activate User
 greenCity.user.page.popup.activated.p1=Are you sure you want to Activate User? The reasons of deactivation for the Deactivation 
 greenCity.user.page.popup.activated.p1.was=was:
 greenCity.user.page.popup.activated.p2=This user will be able to login again.
 greenCity.user.page.popup.activated.div=Activate
-
 greenCity.user.page.popup.deactivated.h=Deactivate User
 greenCity.user.page.popup.deactivated.p1=If you intend to Deactivate User, you have to specify one more reason to do it:
 greenCity.user.page.popup.deactivated.fieldset.input=inappropriate credo content in profile
 greenCity.user.page.popup.deactivated.fieldset.input1=inappropriate behavior in news publications
 greenCity.user.page.popup.deactivated.fieldset.input2=other
-
 greenCity.user.page.popup.deactivated.all.p1=Are you sure you want to deactivate these Users?
 greenCity.user.page.popup.deactivated.all.div=Deactivate marked
+/*userpersonalpage*/
+greenCity.personal.page.h=User's personal page
+greenCity.personal.page.myAchievements=My Achievements
+greenCity.personal.page.myFriends=My Friends
+greenCity.personal.page.acquiredHabitsH=Habits Acquired:
+greenCity.personal.page.inProgressHabitsH=Habits in Progress:
+greenCity.personal.page.cancelledHabitsH=Habits Cancelled:
+greenCity.personal.page.customHabitsH=Custom Habits:
+greenCity.personal.page.publishedEcoNewsH=Published Eco News:
+greenCity.personal.page.publishedTipsAndTricksH=Published Tips & Tricks:
+greenCity.personal.page.createdEcoPlacesH=Created EcoPlaces:
 
 /*habitpage*/
 greenCity.habit.page.h=Manage Habit
