changed footer according to mockups, added About Us page

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -240,6 +240,9 @@ greenCity.page.footer.places=Places
 greenCity.page.footer.tags=Tags
 greenCity.page.footer.social.network.images=Social network images
 greenCity.page.footer.shoppingListItems=Shopping List Items
+greenCity.page.footer.friends=Friends
+greenCity.page.footer.about.us=About Us
+greenCity.page.footer.ubs.courier=UBS Courier
 
 /*habitShoppingListpage*/
 greenCity.habitShoppingListItem.page.h=Manage Habit Shopping List
