--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -239,6 +239,9 @@ greenCity.page.footer.places=\u041c\u0456\u0441\u0446\u044f
 greenCity.page.footer.tags=\u0422\u0435\u0433\u0438
 greenCity.page.footer.social.network.images=\u0417\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u043d\u044f\u0020\u0441\u043e\u0446\u0456\u0430\u043b\u044c\u043d\u043e\u0457\u0020\u043c\u0435\u0440\u0435\u0436\u0456
 greenCity.page.footer.shoppingListItems=\u041f\u043e\u043a\u0443\u043f\u043a\u0438
+greenCity.page.footer.friends=?????
+greenCity.page.footer.about.us=??? ???
+greenCity.page.footer.ubs.courier=UBS ???'??
 
 /*habitShoppingListpage*/
 greenCity.habitShoppingListItem.page.h=\u041a\u0435\u0440\u0443\u0432\u0430\u043d\u043d\u044f\u0020\u0441\u043f\u0438\u0441\u043a\u043e\u043c\u0020\u043f\u043e\u043a\u0443\u043f\u043e\u043a\u0020\u0434\u043b\u044f\u0020\u0437\u0432\u0438\u0447\u043a\u0438
