single habit page on admin side

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -54,6 +54,8 @@ greenCity.pages.table.fact.of.day.status=Fact of day status
 greenCity.pages.table.language.id=Language ID
 greenCity.pages.table.achievement.category=Achievement Category
 greenCity.pages.table.condition=Condition
+greenCity.pages.table.days=days
+greenCity.pages.table.hide=hide
 greenCity.pages.table.title=Title
 greenCity.pages.table.description=Description
 greenCity.pages.table.duration=Duration
@@ -75,11 +77,13 @@ greenCity.pages.table.credo=Credo
 greenCity.pages.table.role=Role
 greenCity.pages.table.status=Status
 greenCity.pages.table.name=Name
+greenCity.pages.table.link=Link
 greenCity.pages.table.habit.item=Habit Item
 greenCity.pages.table.image.upload=Image Upload
 greenCity.pages.table.icon=Icon
 greenCity.pages.table.lang=Lang
 greenCity.pages.table.complexity=Complexity
+
 greenCity.pages.table.connection=Connection
 greenCity.pages.table.event.name=Event Name
 greenCity.pages.table.user.id=User ID
@@ -175,6 +179,7 @@ greenCity.personal.page.h=User's personal page
 greenCity.personal.page.myAchievements=My Achievements
 greenCity.personal.page.myFriends=My Friends
 greenCity.personal.page.acquiredHabitsH=Habits Acquired:
+greenCity.personal.page.habitsFacts=Habit`s Facts:
 greenCity.personal.page.inProgressHabitsH=Habits in Progress:
 greenCity.personal.page.cancelledHabitsH=Habits Cancelled:
 greenCity.personal.page.customHabitsH=Custom Habits:
@@ -184,7 +189,7 @@ greenCity.personal.page.createdEcoPlacesH=Created EcoPlaces:
 
 /*habitpage*/
 greenCity.habit.page.h=Manage Habit
-greenCity.habit.page.add.habit=Add Habit
+greenCity.habit.page.add.habit=Add new habit
 greenCity.habit.page.delete.habit=Delete Habit
 greenCity.habit.page.edit.habit=Edit Habit
 
