--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -55,6 +55,8 @@ greenCity.pages.table.translations=\u041f\u0435\u0440\u0435\u043a\u043b\u0430\u0
 greenCity.pages.table.translation.id=\u0049\u0044\u041f\u0435\u0440\u0435\u043a\u043b\u0430\u0434\u0443
 greenCity.pages.table.language.code=\u041a\u043e\u0434\u041c\u043e\u0432\u0438
 greenCity.pages.table.language.id=\u0049\u0044\u0020\u004d\u043e\u0432\u0438
+greenCity.pages.table.days=днів
+greenCity.pages.table.hide=сховати
 greenCity.pages.table.achievement.category=\u041a\u0430\u0442\u0435\u0433\u043e\u0440\u0456\u044f\u0020\u0434\u043e\u0441\u044f\u0433\u043d\u0435\u043d\u044c
 greenCity.pages.table.condition=\u0421\u0442\u0430\u043d
 greenCity.pages.table.title=\u0417\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a
@@ -78,6 +80,7 @@ greenCity.pages.table.credo=\u041a\u0440\u0435\u0434\u043e
 greenCity.pages.table.role=\u0420\u043e\u043b\u044c
 greenCity.pages.table.status=\u0421\u0442\u0430\u0442\u0443\u0441
 greenCity.pages.table.name=\u0406\u043c\u0027\u044f
+greenCity.pages.table.link=Посилання
 greenCity.pages.table.habit.item=\u041f\u0440\u0435\u0434\u043c\u0435\u0442\u0020\u0437\u0432\u0438\u0447\u043a\u0438
 greenCity.pages.table.image.upload=\u0417\u0430\u0432\u0430\u043d\u0442\u0430\u0436\u0435\u043d\u0435\u0020\u0437\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u043d\u044f
 greenCity.pages.table.lang=\u041c\u043e\u0432\u0430
@@ -172,7 +175,7 @@ greenCity.user.page.popup.activated.p1=\u0412\u0438\u0020\u0432\u043f\u0435\u043
 greenCity.user.page.popup.activated.p1.was=\u0431\u0443\u0432\u003a
 greenCity.user.page.popup.activated.p2=\u0426\u0435\u0439\u0020\u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0020\u0437\u043c\u043e\u0436\u0435\u0020\u0432\u0432\u0456\u0439\u0442\u0438\u0020\u0437\u043d\u043e\u0432\u0443\u002e
 greenCity.user.page.popup.activated.div=\u0410\u043a\u0442\u0438\u0432\u0443\u0432\u0430\u0442\u0438
-
+greenCity.personal.page.habitsFacts=Факти звички:
 greenCity.user.page.popup.deactivated.h=\u0414\u0435\u0430\u043a\u0442\u0438\u0432\u0443\u0432\u0430\u0442\u0438\u0020\u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
 greenCity.user.page.popup.deactivated.p1=\u042f\u043a\u0449\u043e\u0020\u0432\u0438\u0020\u043c\u0430\u0454\u0442\u0435\u0020\u043d\u0430\u043c\u0456\u0440\u0020\u0434\u0435\u0430\u043a\u0442\u0438\u0432\u0443\u0432\u0430\u0442\u0438\u0020\u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430\u002c\u0020\u0432\u0430\u043c\u0020\u0441\u043b\u0456\u0434\u0020\u0432\u043a\u0430\u0437\u0430\u0442\u0438\u0020\u0020\u043e\u0434\u043d\u0443\u0020\u043f\u0440\u0438\u0447\u0438\u043d\u0443\u0020\u0434\u043b\u044f\u0020\u0434\u0435\u0430\u043a\u0442\u0438\u0432\u0430\u0446\u0456\u0457\u0020\u003a
 greenCity.user.page.popup.deactivated.fieldset.input=\u043d\u0435\u043f\u0440\u0438\u0439\u043d\u044f\u0442\u043d\u0438\u0439\u0020\u0432\u043c\u0456\u0441\u0442\u0020\u043a\u0440\u0435\u0434\u043e\u0020\u0443\u0020\u043f\u0440\u043e\u0444\u0456\u043b\u0456
@@ -184,7 +187,7 @@ greenCity.user.page.popup.deactivated.all.div=\u0414\u0435\u0430\u043a\u0442\u04
 
 /*habitpage*/
 greenCity.habit.page.h=\u041a\u0435\u0440\u0443\u0432\u0430\u043d\u043d\u044f\u0020\u0417\u0432\u0438\u0447\u043a\u0430\u043c\u0438
-greenCity.habit.page.add.habit=\u0414\u043e\u0434\u0430\u0442\u0438\u0020\u0417\u0432\u0438\u0447\u043a\u0443
+greenCity.habit.page.add.habit=Додати нову звичку
 greenCity.habit.page.delete.habit=\u0412\u0438\u0434\u0430\u043b\u0438\u0442\u0438\u0020\u0417\u0432\u0438\u0447\u043a\u0443
 greenCity.habit.page.edit.habit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438\u0020\u0417\u0432\u0438\u0447\u043a\u0443
 
@@ -239,9 +242,9 @@ greenCity.page.footer.places=\u041c\u0456\u0441\u0446\u044f
 greenCity.page.footer.tags=\u0422\u0435\u0433\u0438
 greenCity.page.footer.social.network.images=\u0417\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u043d\u044f\u0020\u0441\u043e\u0446\u0456\u0430\u043b\u044c\u043d\u043e\u0457\u0020\u043c\u0435\u0440\u0435\u0436\u0456
 greenCity.page.footer.shoppingListItems=\u041f\u043e\u043a\u0443\u043f\u043a\u0438
-greenCity.page.footer.friends=?????
-greenCity.page.footer.about.us=??? ???
-greenCity.page.footer.ubs.courier=UBS ???'??
+greenCity.page.footer.friends=Друзі
+greenCity.page.footer.about.us=Про нас
+greenCity.page.footer.ubs.courier=UBS Кур'єр
 
 /*habitShoppingListpage*/
 greenCity.habitShoppingListItem.page.h=\u041a\u0435\u0440\u0443\u0432\u0430\u043d\u043d\u044f\u0020\u0441\u043f\u0438\u0441\u043a\u043e\u043c\u0020\u043f\u043e\u043a\u0443\u043f\u043e\u043a\u0020\u0434\u043b\u044f\u0020\u0437\u0432\u0438\u0447\u043a\u0438
