created repository method, service method and added it to habit Controller

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -270,7 +270,7 @@ greenCity.sidebar.users=Users
 greenCity.sidebar.habits=Habits
 greenCity.sidebar.habits.all=All Habits
 greenCity.sidebar.habits.facts=Habit's Facts
-greenCity.sidebar.habits.advice=Habit's Advice
+greenCity.sidebar.habits.advice=Habit's Advices
 greenCity.sidebar.habits.shoppingList=Shopping List 
 greenCity.sidebar.econews=Eco News
 greenCity.sidebar.tags=Tags
