Changes in pop-ups "Activate" and "Deactivate" Added validation for reasons to deactivate user Small changes in messages(ua,en)

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -168,7 +168,7 @@ greenCity.user.page.popup.activated.p1.was=was:
 greenCity.user.page.popup.activated.p2=This user will be able to login again.
 greenCity.user.page.popup.activated.div=Activate
 greenCity.user.page.popup.deactivated.h=Deactivate User
-greenCity.user.page.popup.deactivated.p1=If you intend to Deactivate User, you have to specify one more reason to do it:
+greenCity.user.page.popup.deactivated.p1=If you intend to Deactivate User, you have to specify one or more reason to do it:
 greenCity.user.page.popup.deactivated.fieldset.input=inappropriate credo content in profile
 greenCity.user.page.popup.deactivated.fieldset.input1=inappropriate behavior in news publications
 greenCity.user.page.popup.deactivated.fieldset.input2=other
