--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -153,6 +153,11 @@ greenCity.econews.page.h=Manage Eco News
 greenCity.econews.page.add.eco.news=Add Eco News
 greenCity.econews.page.delete.eco.news=Delete Eco News
 greenCity.econews.page.edit.eco.news=Edit Eco News
+/*events*/
+greenCity.events.page.h=Manage Events
+greenCity.events.page.add.event=Add Event
+greenCity.events.page.delete.event=Delete Event
+greenCity.events.page.edit.event=Edit Event
 /*userspage*/
 greenCity.user.page.h=Manager Page
 greenCity.user.page.add.user=Add User
@@ -266,6 +271,7 @@ greenCity.sidebar.habits.facts=Habit's Facts
 greenCity.sidebar.habits.advice=Habit's Advices
 greenCity.sidebar.habits.shoppingList=Shopping List 
 greenCity.sidebar.econews=Eco News
+greenCity.sidebar.events=Events
 greenCity.sidebar.tags=Tags
 greenCity.sidebar.ecoPlaces=Eco Places
 greenCity.sidebar.ratings=Ratings
