Improved management page

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -52,8 +52,10 @@ greenCity.pages.table.translation.id=TranslationID
 greenCity.pages.table.language.code=LanguageCode
 greenCity.pages.table.fact.of.day.status=Fact of day status
 greenCity.pages.table.language.id=Language ID
-greenCity.pages.table.achievement.category=Achievement Category
-greenCity.pages.table.condition=Condition
+greenCity.pages.table.achievement.category=Category
+greenCity.pages.table.achievement.condition=Condition
+greenCity.pages.table.achievement.icon=Icon
+greenCity.pages.table.achievement.users-achieved-total=Users achieved total
 greenCity.pages.table.days=days
 greenCity.pages.table.hide=hide
 greenCity.pages.table.title=Title
