--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -57,11 +57,13 @@ greenCity.pages.table.language.code=\u041a\u043e\u0434\u041c\u043e\u0432\u0438
 greenCity.pages.table.language.id=\u0049\u0044\u0020\u004d\u043e\u0432\u0438
 greenCity.pages.table.days=днів
 greenCity.pages.table.hide=сховати
-greenCity.pages.table.achievement.category=\u041a\u0430\u0442\u0435\u0433\u043e\u0440\u0456\u044f\u0020\u0434\u043e\u0441\u044f\u0433\u043d\u0435\u043d\u044c
-greenCity.pages.table.condition=\u0421\u0442\u0430\u043d
+greenCity.pages.table.achievement.category=\u041a\u0430\u0442\u0435\u0433\u043e\u0440\u0456\u044f
+greenCity.pages.table.achievement.condition=\u0423\u043c\u043e\u0432\u0430\u0020\u0432\u0438\u043a\u043e\u043d\u0430\u043d\u043d\u044f
+greenCity.pages.table.achievement.icon=\u0406\u043a\u043e\u043d\u043a\u0430
+greenCity.pages.table.achievement.users-achieved-total=\u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432\u0020\u0434\u043e\u0441\u044f\u0433\u043d\u0443\u043b\u043e
 greenCity.pages.table.title=\u0417\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a
 greenCity.pages.table.description=\u041e\u043f\u0438\u0441
-greenCity.pages.table.duration=\u0422\u0440\u0438\u0432\u0430\u043b\u0456\u0441\u0442\u044c 
+greenCity.pages.table.duration=\u0422\u0440\u0438\u0432\u0430\u043b\u0456\u0441\u0442\u044c
 greenCity.pages.table.default.duration=\u0422\u0440\u0438\u0432\u0430\u043b\u0456\u0441\u0442\u044c \u0437\u0430 \u0437\u0430\u043c\u043e\u0432\u0447\u0443\u0432\u0430\u043d\u043d\u044f\u043c
 greenCity.pages.table.users.language=\u041c\u043e\u0432\u0430 \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432\u003a
 greenCity.pages.table.message=\u041f\u043e\u0432\u0456\u0434\u043e\u043c\u043b\u0435\u043d\u043d\u044f
