Create logic for adding, searching and filtering users in table

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -75,6 +75,9 @@ greenCity.pages.table.userName=User Name
 greenCity.pages.table.email=Email
 greenCity.pages.table.credo=Credo
 greenCity.pages.table.role=Role
+greenCity.pages.table.search=Search criteria
+greenCity.pages.table.filtername=Filter name
+greenCity.pages.table.filtermessage=The maximum number of filters is 3!
 greenCity.pages.table.status=Status
 greenCity.pages.table.name=Name
 greenCity.pages.table.link=Link
