--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -57,6 +57,9 @@ greenCity.pages.table.language.code=\u041a\u043e\u0434\u041c\u043e\u0432\u0438
 greenCity.pages.table.language.id=\u0049\u0044\u0020\u004d\u043e\u0432\u0438
 greenCity.pages.table.days=днів
 greenCity.pages.table.hide=сховати
+greenCity.pages.table.search=\u041a\u0440\u0438\u0442\u0435\u0440\u0456\u0439\u0020\u043f\u043e\u0448\u0443\u043a\u0443
+greenCity.pages.table.filtername=\u041d\u0430\u0437\u0432\u0430\u0020\u0444\u0456\u043b\u044c\u0442\u0440\u0443
+greenCity.pages.table.filtermessage=\u041c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u0430\u0020\u043a\u0456\u043b\u044c\u043a\u0456\u0441\u0442\u044c\u0020\u0444\u0456\u043b\u044c\u0442\u0440\u0456\u0432\u0020\u0033\u0021
 greenCity.pages.table.achievement.category=\u041a\u0430\u0442\u0435\u0433\u043e\u0440\u0456\u044f\u0020\u0434\u043e\u0441\u044f\u0433\u043d\u0435\u043d\u044c
 greenCity.pages.table.condition=\u0421\u0442\u0430\u043d
 greenCity.pages.table.title=\u0417\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a
