--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -40,7 +40,7 @@ greenCity.validation.user.created=\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u04
 greenCity.validation.empty.tags=\u041F\u0440\u0438\u043D\u0430\u0439\u043C\u043D\u0456 \u043E\u0434\u0438\u043D \u0442\u0435\u0433
 
 /*headerforall*/
-greenCity.current.language=Ua
+greenCity.current.language=\u0055\u0061
 
 /*forallpages*/
 greenCity.pages.search=\u0428\u0443\u043A\u0430\u0442\u0438
