--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -133,7 +133,7 @@ greenCity.pages.popup.language.code=\u041A\u043E\u0434\u0020\u043C\u043E\u0432\u
 greenCity.pages.popup.cancel.=\u0421\u043A\u0430\u0441\u0443\u0432\u0430\u0442\u0438
 greenCity.pages.popup.add.=\u0414\u043E\u0434\u0430\u0442\u0438
 greenCity.pages.popup.save.=\u0417\u0431\u0435\u0440\u0435\u0433\u0442\u0438
-greenCity.pages.popup.save.changes=Save changes
+greenCity.pages.popup.save.changes=\u0053\u0061\u0076\u0065 \u0063\u0068\u0061\u006e\u0067\u0065\u0073
 
 /*paginationpages*/
 greenCity.page.paging.show=\u041F\u043E\u043A\u0430\u0437\u0430\u043D\u043E
