--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -167,6 +167,7 @@ greenCity.events.page.edit.event=Edit Event
 /*userspage*/
 greenCity.user.page.h=Manager Page
 greenCity.user.page.add.user=Add User
+greenCity.user.page.edit.user=Edit User
 greenCity.user.page.deactivated=Deactivated
 greenCity.user.page.popup.activated.h=Activate User
 greenCity.user.page.popup.activated.p1=Are you sure you want to Activate User? The reasons of deactivation for the Deactivation 
