Added likes and dislikes column to eco news management panel (#4686).
- add dislike endpoint
- list eco news likes/dislikes
- view likes/dislikes from eco news panel
- code fix

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -67,6 +67,8 @@ greenCity.pages.table.text=Text
 greenCity.pages.table.image=Image
 greenCity.pages.table.date=Date
 greenCity.pages.table.tags=Tags
+greenCity.pages.table.likes=Likes
+greenCity.pages.table.dislikes=Dislikes
 greenCity.pages.table.title.translations=Title Translations
 greenCity.pages.table.image.path=Image Path
 greenCity.pages.table.creation.date=Creation Date
@@ -159,6 +161,9 @@ greenCity.econews.page.delete.eco.news=Delete Eco News
 greenCity.econews.page.edit.eco.news=Edit Eco News
 greenCity.econews.page.comments=Comments
 greenCity.econews.page.comment=comment
+greenCity.econews.page.view.userLikes=Users who liked post
+greenCity.econews.page.view.userDislikes=Users who disliked post
+greenCity.econews.page.view=view
 /*events*/
 greenCity.events.page.h=Manage Events
 greenCity.events.page.add.event=Add Event
