--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -44,6 +44,7 @@ greenCity.pages.delete=Delete
 greenCity.pages.edit=Edit
 greenCity.pages.seeAll=See all
 greenCity.pages.table.id=ID
+greenCity.pages.table.edit=Edit
 greenCity.pages.table.habit.id=Habit ID
 greenCity.pages.table.actions=Actions
 greenCity.pages.table.content=Content
@@ -168,7 +169,7 @@ greenCity.events.page.edit.event=Edit Event
 greenCity.user.page.h=Manager Page
 greenCity.user.page.add.user=Add User
 greenCity.user.page.edit.user=Edit User
-greenCity.user.page.deactivated=Deactivated
+greenCity.user.page.deactivated=Deactivate
 greenCity.user.page.popup.activated.h=Activate User
 greenCity.user.page.popup.activated.p1=Are you sure you want to Activate User? The reasons of deactivation for the Deactivation 
 greenCity.user.page.popup.activated.p1.was=was:
