Create Event by admin with working frontend validation.

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -162,6 +162,8 @@ greenCity.econews.page.comments=Comments
 greenCity.econews.page.comment=comment
 /*events*/
 greenCity.events.page.h=Manage Events
+greenCity.events.page.initiativeType=Initiative Type
+greenCity.events.page.EventType=Event Type
 greenCity.events.page.add.event=Add Event
 greenCity.events.page.delete.event=Delete Event
 greenCity.events.page.edit.event=Edit Event
