--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -169,6 +169,7 @@ greenCity.events.page.edit.event=Edit Event
 greenCity.user.page.h=Manager Page
 greenCity.user.page.add.user=Add User
 greenCity.user.page.edit.user=Edit User
+greenCity.user.page.change.role=Change role
 greenCity.user.page.deactivated=Deactivate
 greenCity.user.page.popup.activated.h=Activate User
 greenCity.user.page.popup.activated.p1=Are you sure you want to Activate User? The reasons of deactivation for the Deactivation 
@@ -182,6 +183,9 @@ greenCity.user.page.popup.deactivated.fieldset.input1=inappropriate behavior in 
 greenCity.user.page.popup.deactivated.fieldset.input2=other
 greenCity.user.page.popup.deactivated.all.p1=Are you sure you want to deactivate these Users?
 greenCity.user.page.popup.deactivated.all.div=Deactivate marked
+greenCity.user.page.name.validation.error=Name must contain between 6 and 30 characters.
+greenCity.user.page.email.validation.error=Entered e-mail is incorrect.
+greenCity.user.page.role.validation.error=Invalid role.
 /*userpersonalpage*/
 greenCity.personal.page.h=User's personal page
 greenCity.personal.page.myAchievements=My Achievements
