Add user, edit user, change role (#4722)
* bugfix in managmentRegisterUser, adjust the test accordingly

* Make role update functionality to work with GreenCityUser, add HttpClient dependency to support Http.Patch in RestTemplate, Add exception handling for communication with GreenCityUser, refactor adequate tests

* Fix edit user

* Fix edit user

Make role update functionality to work with GreenCityUser, add HttpClient dependency to support Http.Patch in RestTemplate, Add exception handling for communication with GreenCityUser, refactor adequate tests

bugfix in managmentRegisterUser, adjust the test accordingly

* refactor user update to work with corrected endpoint uri in GreenCityUser, correct tests, bugfix on js form validators

* checkstyle, edit user button in separate table column

* Fix code smells, improve validation with default browser mechanisms and bootstrap classes, correct deprecated method description, add better approach to role selectors, change add user handling to utilize default form event, add basic handling of server errors in edit modal

* Update test

* Change edit placement and replace button with pencil icon, Refactor statuses column to display every status from UserStatus enum instead of hard coded columns

* Refactor test, refactor problematic java doc in user service

* Correct html/css for filtering and sorting in user table, change dropdown of role and its handling in jquery

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -44,6 +44,7 @@ greenCity.pages.delete=Delete
 greenCity.pages.edit=Edit
 greenCity.pages.seeAll=See all
 greenCity.pages.table.id=ID
+greenCity.pages.table.edit=Edit
 greenCity.pages.table.habit.id=Habit ID
 greenCity.pages.table.actions=Actions
 greenCity.pages.table.content=Content
@@ -167,7 +168,9 @@ greenCity.events.page.edit.event=Edit Event
 /*userspage*/
 greenCity.user.page.h=Manager Page
 greenCity.user.page.add.user=Add User
-greenCity.user.page.deactivated=Deactivated
+greenCity.user.page.edit.user=Edit User
+greenCity.user.page.change.role=Change role
+greenCity.user.page.deactivated=Deactivate
 greenCity.user.page.popup.activated.h=Activate User
 greenCity.user.page.popup.activated.p1=Are you sure you want to Activate User? The reasons of deactivation for the Deactivation 
 greenCity.user.page.popup.activated.p1.was=was:
@@ -180,6 +183,9 @@ greenCity.user.page.popup.deactivated.fieldset.input1=inappropriate behavior in 
 greenCity.user.page.popup.deactivated.fieldset.input2=other
 greenCity.user.page.popup.deactivated.all.p1=Are you sure you want to deactivate these Users?
 greenCity.user.page.popup.deactivated.all.div=Deactivate marked
+greenCity.user.page.name.validation.error=Name must contain between 6 and 30 characters.
+greenCity.user.page.email.validation.error=Entered e-mail is incorrect.
+greenCity.user.page.role.validation.error=Invalid role.
 /*userpersonalpage*/
 greenCity.personal.page.h=User's personal page
 greenCity.personal.page.myAchievements=My Achievements
