rebase onto dev
fix code smells, add handling of UserDeactivatedException.class

fix minor bug in management_user.html

Correct security tests

Add users names to deactivate users popup

Exception handler debug

Debug checking if user is deactivated in AccessTokenAuthenticationFilter and optimize its db query, redo deactivate checked users modal and jquery, add method to insert checked users into modal

Refactor deactivate listed users functionality, adjust popup, refactor related methods and tests

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -186,7 +186,7 @@ greenCity.user.page.popup.deactivated.p1=If you intend to Deactivate User, you h
 greenCity.user.page.popup.deactivated.fieldset.input=inappropriate credo content in profile
 greenCity.user.page.popup.deactivated.fieldset.input1=inappropriate behavior in news publications
 greenCity.user.page.popup.deactivated.fieldset.input2=other
-greenCity.user.page.popup.deactivated.all.p1=Are you sure you want to deactivate these Users?
+greenCity.user.page.popup.deactivated.all.p1=Are you sure you want to deactivate selected Users?
 greenCity.user.page.popup.deactivated.all.div=Deactivate marked
 greenCity.user.page.name.validation.error=Name must contain between 6 and 30 characters.
 greenCity.user.page.email.validation.error=Entered e-mail is incorrect.
