changed AddCustomHabitDtoRequest and AddCustomHabitDtoResponse created CustomShoppingListResponseDtoMapper created HabitTranslationDtoMapper changed method in HabitServiceImpl changed type of field description in habit-translation table changed and added new tests

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -35,6 +35,8 @@ greenCity.validation.bad.discountValues=Length of discount values list can not b
 greenCity.validation.bad.comma.separated.numbers=Non-empty string can contain numbers separated by a comma only
 greenCity.validation.user.created=User was created. Verification letter has been sent to your email address
 greenCity.validation.empty.tags=At least one tag
+greenCity.validation.min.tags=Length of tag list can not be less than {min}
+greenCity.validation.max.tags=Length of tag list can not be more than {max}
 /*headerforall*/
 greenCity.current.language=En
 /*forallpages*/
