--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -165,6 +165,12 @@ greenCity.econews.page.edit.eco.news=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\
 greenCity.econews.page.comments=\u041A\u043E\u043C\u0435\u043D\u0442\u0430\u0440\u0456
 greenCity.econews.page.comment=\u043A\u043E\u043C\u0435\u043D\u0442\u0456\u0432
 
+/*events*/
+greenCity.events.page.h=\u041C\u0435\u043D\u0435\u0440\u0436\u0435\u0440 \u043F\u043E\u0434\u0456\u0439
+greenCity.events.page.add.event=\u0414\u043E\u0434\u0430\u0442\u0438 \u043F\u043E\u0434\u0456\u044E
+greenCity.events.page.delete.event=\u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043F\u043E\u0434\u0456\u044E
+greenCity.events.page.edit.event=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u043F\u043E\u0434\u0456\u044E
+
 /*userspage*/
 greenCity.user.page.h=\u041C\u0435\u043D\u0435\u0434\u0436\u0435\u0440\u0020\u0421\u0442\u043E\u0440\u0456\u043D\u043A\u0430
 greenCity.user.page.add.user=\u0414\u043E\u0434\u0430\u0442\u0438\u0020\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
