Add translation for "Events" on sidebar

--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -275,6 +275,7 @@ greenCity.sidebar.habits.facts=\u0424\u0430\u043A\u0442\u0438 \u043F\u0440\u043E
 greenCity.sidebar.habits.advice=\u041F\u043E\u0440\u0430\u0434\u0438 \u0449\u043E\u0434\u043E \u0417\u0432\u0438\u0447\u043A\u0438
 greenCity.sidebar.habits.shoppingList=\u0421\u043F\u0438\u0441\u043E\u043A \u041F\u043E\u043A\u0443\u043F\u043E\u043A
 greenCity.sidebar.econews=\u0415\u043A\u043E \u041D\u043E\u0432\u0438\u043D\u0438
+greenCity.sidebar.events=\u041F\u043E\u0434\u0456\u0457
 greenCity.sidebar.tags=\u0422\u0435\u0433\u0438
 greenCity.sidebar.ecoPlaces=\u0415\u043A\u043E \u041C\u0456\u0441\u0446\u044F
 greenCity.sidebar.ratings=\u0420\u0435\u0439\u0442\u0438\u043D\u0433\u0438
