--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -247,9 +247,10 @@ greenCity.page.footer.places=\u041C\u0456\u0441\u0446\u044F
 greenCity.page.footer.tags=\u0422\u0435\u0433\u0438
 greenCity.page.footer.social.network.images=\u0417\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u043D\u044F\u0020\u0441\u043E\u0446\u0456\u0430\u043B\u044C\u043D\u043E\u0457\u0020\u043C\u0435\u0440\u0435\u0436\u0456
 greenCity.page.footer.shoppingListItems=\u041F\u043E\u043A\u0443\u043F\u043A\u0438
-greenCity.page.footer.friends=\u00D0\u0094\u00D1\u0080\u00D1\u0083\u00D0\u00B7\u00D1\u0096
-greenCity.page.footer.about.us=\u00D0\u009F\u00D1\u0080\u00D0\u00BE \u00D0\u00BD\u00D0\u00B0\u00D1\u0081
-greenCity.page.footer.ubs.courier=UBS \u00D0\u009A\u00D1\u0083\u00D1\u0080'\u00D1\u0094\u00D1\u0080
+greenCity.page.footer.friends=\u0414\u0440\u0443\u0437\u0456
+greenCity.page.footer.about.us=\u041f\u0440\u043e \u043d\u0430\u0441
+greenCity.page.footer.ubs.courier=UBS \u041a\u0443\u0440'\u0454\u0440
+
 
 /*habitShoppingListpage*/
 greenCity.habitShoppingListItem.page.h=\u041A\u0435\u0440\u0443\u0432\u0430\u043D\u043D\u044F\u0020\u0441\u043F\u0438\u0441\u043A\u043E\u043C\u0020\u043F\u043E\u043A\u0443\u043F\u043E\u043A\u0020\u0434\u043B\u044F\u0020\u0437\u0432\u0438\u0447\u043A\u0438
