Complete create event page

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -92,7 +92,14 @@ greenCity.pages.table.icon=Icon
 greenCity.pages.table.lang=Lang
 greenCity.pages.table.complexity=Complexity
 greenCity.pages.table.back=Back
-
+greenCity.pages.table.uploadPictures=Upload PNG or JPG only. File size should be less than 10MB
+greenCity.pages.table.initiativeType=Initiative type
+greenCity.pages.table.eventType=Event type
+greenCity.pages.table.open=Open
+greenCity.pages.table.closed=Closed
+greenCity.pages.table.environmental=Environment
+greenCity.pages.table.social=Social
+greenCity.pages.table.economic=Economic
 greenCity.pages.table.connection=Connection
 greenCity.pages.table.event.name=Event Name
 greenCity.pages.table.user.id=User ID
