--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -90,6 +90,12 @@ greenCity.pages.table.lang=\u041C\u043E\u0432\u0430
 greenCity.pages.table.icon=\u0417\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u043D\u044F
 greenCity.pages.table.complexity=\u0421\u043A\u043B\u0430\u0434\u043D\u0456\u0441\u0442\u044C
 greenCity.pages.table.back=\u041D\u0430\u0437\u0430\u0434
+greenCity.pages.table.uploadPictures=\u0417\u0430\u0432\u0430\u043D\u0442\u0430\u0436\u0443\u0439\u0442\u0435 \u043B\u0438\u0448\u0435 PNG \u0430\u0431\u043E JPG. \u0420\u043E\u0437\u043C\u0456\u0440 \u0444\u0430\u0439\u043B\u0443 \u043C\u0430\u0454 \u0431\u0443\u0442\u0438 \u043C\u0435\u043D\u0448\u0438\u043C\u044B \u043D\u0456\u0436 10MB
+greenCity.pages.table.initiativeType=\u0422\u0438\u043F \u0438\u043D\u0438\u0446\u0438\u0430\u0442\u0438\u0432\u0430
+greenCity.pages.table.eventType=\u0422\u0438\u043F \u00E2\u0437\u0430\u0445\u043E\u0434\u0443
+greenCity.pages.table.open=\u0412\u0438\u0434\u043A\u0440\u0438\u0442\u0438\u0439
+greenCity.pages.table.closed=\u0417\u0430\u043A\u0440\u0438\u0442\u0438\u0439
+greenCity.pages.table.environmental=\u0415\u043A\u043E\u043B\u043E\u0433\u0438\u0447\u043D\u0438\u0439
 greenCity.pages.table.connection=\u0417\u0432'\u044F\u0437\u043A\u0438
 greenCity.pages.table.event.name=\u041D\u0430\u0437\u0432\u0430\u0020\u041F\u043E\u0434\u0456\u0457
 greenCity.pages.table.user.id=\u0020ID\u0020\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
