--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -143,8 +143,10 @@ greenCity.pages.popup.delete.all.h2=This action cannot be undone.
 greenCity.pages.popup.delete.h2=Are you sure you want to delete this Records?
 greenCity.pages.popup.language.code=Language Code
 greenCity.pages.popup.cancel.=Cancel
+greenCity.pages.popup.goback.=Go Back
 greenCity.pages.popup.add.=Add
 greenCity.pages.popup.save.=Save
+greenCity.pages.popup.preview.= Preview
 greenCity.pages.popup.save.changes=Save changes
 /*paginationpages*/
 greenCity.page.paging.show=Showing
@@ -315,3 +317,11 @@ greenCity.sidebar.statistics.ecoNews=Eco News Statistic
 greenCity.sidebar.statistics.ecoPlaces=Eco Places Statistic
 greenCity.sidebar.statistics.achievements=Achievements Statistic
 greenCity.sidebar.statistics.tags=Tags statistic of Entities
+
+
+greenCity.imageUpload.proposed=Proposed Images
+greenCity.imageUpload.preview=Preview
+
+greenCity.event.invitees=Invitees
+greenCity.event.invitees.all=All
+greenCity.event.invitees.friends=Friends
