--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -92,10 +92,12 @@ greenCity.pages.table.complexity=\u0421\u043A\u043B\u0430\u0434\u043D\u0456\u044
 greenCity.pages.table.back=\u041D\u0430\u0437\u0430\u0434
 greenCity.pages.table.uploadPictures=\u0417\u0430\u0432\u0430\u043D\u0442\u0430\u0436\u0443\u0439\u0442\u0435 \u043B\u0438\u0448\u0435 PNG \u0430\u0431\u043E JPG. \u0420\u043E\u0437\u043C\u0456\u0440 \u0444\u0430\u0439\u043B\u0443 \u043C\u0430\u0454 \u0431\u0443\u0442\u0438 \u043C\u0435\u043D\u0448\u0438\u043C\u044B \u043D\u0456\u0436 10MB
 greenCity.pages.table.initiativeType=\u0422\u0438\u043F \u0438\u043D\u0438\u0446\u0438\u0430\u0442\u0438\u0432\u0430
-greenCity.pages.table.eventType=\u0422\u0438\u043F \u00E2\u0437\u0430\u0445\u043E\u0434\u0443
-greenCity.pages.table.open=\u0412\u0438\u0434\u043A\u0440\u0438\u0442\u0438\u0439
-greenCity.pages.table.closed=\u0417\u0430\u043A\u0440\u0438\u0442\u0438\u0439
+greenCity.pages.table.eventType=\u0422\u0438\u043f\u0020\u0437\u0430\u0445\u043e\u0434\u0443
+greenCity.pages.table.open=\u0412\u0456\u0434\u043a\u0440\u0438\u0442\u0438\u0439
+greenCity.pages.table.closed=\u0417\u0430\u043a\u0440\u0438\u0442\u0438\u0439
 greenCity.pages.table.environmental=\u0415\u043A\u043E\u043B\u043E\u0433\u0438\u0447\u043D\u0438\u0439
+greenCity.pages.table.social=\u0421\u043e\u0446\u0456\u0430\u043b\u044c\u043d\u0438\u0439
+greenCity.pages.table.economic=\u0415\u043a\u043e\u043d\u043e\u043c\u0456\u0447\u043d\u0438\u0439
 greenCity.pages.table.connection=\u0417\u0432'\u044F\u0437\u043A\u0438
 greenCity.pages.table.event.name=\u041D\u0430\u0437\u0432\u0430\u0020\u041F\u043E\u0434\u0456\u0457
 greenCity.pages.table.user.id=\u0020ID\u0020\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
@@ -139,7 +141,9 @@ greenCity.pages.popup.language.code=\u041A\u043E\u0434\u0020\u043C\u043E\u0432\u
 greenCity.pages.popup.cancel.=\u0421\u043A\u0430\u0441\u0443\u0432\u0430\u0442\u0438
 greenCity.pages.popup.add.=\u0414\u043E\u0434\u0430\u0442\u0438
 greenCity.pages.popup.save.=\u0417\u0431\u0435\u0440\u0435\u0433\u0442\u0438
+greenCity.pages.popup.goback.=\u041f\u043e\u0432\u0435\u0440\u043d\u0443\u0442\u0438\u0441\u044c
 greenCity.pages.popup.save.changes=\u0053\u0061\u0076\u0065 \u0063\u0068\u0061\u006e\u0067\u0065\u0073
+greenCity.pages.popup.preview.= \u041f\u0440\u0435\u0432\u0027\u044e
 
 /*paginationpages*/
 greenCity.page.paging.show=\u041F\u043E\u043A\u0430\u0437\u0430\u043D\u043E
@@ -300,3 +304,10 @@ greenCity.sidebar.statistics.ecoNews=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\
 greenCity.sidebar.statistics.ecoPlaces=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043A\u0430 \u0415\u043A\u043E-\u043C\u0456\u0441\u0446\u044C
 greenCity.sidebar.statistics.achievements=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043A\u0430 \u0414\u043E\u0441\u044F\u0433\u043D\u0435\u043D\u044C
 greenCity.sidebar.statistics.tags=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043A\u0430 \u0422\u0435\u0433\u0456\u0432 \u0421\u0443\u0442\u043D\u043E\u0441\u0442\u0435\u0439
+
+greenCity.imageUpload.proposed=\u0417\u0430\u043f\u0440\u043e\u043f\u043e\u043d\u043e\u0432\u0430\u043d\u0456
+greenCity.imageUpload.preview=\u041f\u0440\u0435\u0432\u0027\u044e
+
+greenCity.event.invitees=\u0417\u0430\u043f\u0440\u043e\u0448\u0435\u043d\u043d\u044f
+greenCity.event.invitees.all=\u0412\u0441\u0456
+greenCity.event.invitees.friends=\u0414\u0440\u0443\u0437\u0456
