--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -174,6 +174,12 @@ greenCity.econews.page.edit.eco.news=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\
 greenCity.econews.page.comments=\u041A\u043E\u043C\u0435\u043D\u0442\u0430\u0440\u0456
 greenCity.econews.page.comment=\u043A\u043E\u043C\u0435\u043D\u0442\u0456\u0432
 
+/*events*/
+greenCity.events.page.h=\u041C\u0435\u043D\u0435\u0440\u0436\u0435\u0440 \u043F\u043E\u0434\u0456\u0439
+greenCity.events.page.add.event=\u0414\u043E\u0434\u0430\u0442\u0438 \u043F\u043E\u0434\u0456\u044E
+greenCity.events.page.delete.event=\u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438 \u043F\u043E\u0434\u0456\u044E
+greenCity.events.page.edit.event=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438 \u043F\u043E\u0434\u0456\u044E
+
 /*userspage*/
 greenCity.user.page.h=\u041C\u0435\u043D\u0435\u0434\u0436\u0435\u0440\u0020\u0421\u0442\u043E\u0440\u0456\u043D\u043A\u0430
 greenCity.user.page.add.user=\u0414\u043E\u0434\u0430\u0442\u0438\u0020\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
@@ -253,9 +259,10 @@ greenCity.page.footer.places=\u041C\u0456\u0441\u0446\u044F
 greenCity.page.footer.tags=\u0422\u0435\u0433\u0438
 greenCity.page.footer.social.network.images=\u0417\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u043D\u044F\u0020\u0441\u043E\u0446\u0456\u0430\u043B\u044C\u043D\u043E\u0457\u0020\u043C\u0435\u0440\u0435\u0436\u0456
 greenCity.page.footer.shoppingListItems=\u041F\u043E\u043A\u0443\u043F\u043A\u0438
-greenCity.page.footer.friends=\u00D0\u0094\u00D1\u0080\u00D1\u0083\u00D0\u00B7\u00D1\u0096
-greenCity.page.footer.about.us=\u00D0\u009F\u00D1\u0080\u00D0\u00BE \u00D0\u00BD\u00D0\u00B0\u00D1\u0081
-greenCity.page.footer.ubs.courier=UBS \u00D0\u009A\u00D1\u0083\u00D1\u0080'\u00D1\u0094\u00D1\u0080
+greenCity.page.footer.friends=\u0414\u0440\u0443\u0437\u0456
+greenCity.page.footer.about.us=\u041f\u0440\u043e \u043d\u0430\u0441
+greenCity.page.footer.ubs.courier=UBS \u041a\u0443\u0440'\u0454\u0440
+
 
 /*habitShoppingListpage*/
 greenCity.habitShoppingListItem.page.h=\u041A\u0435\u0440\u0443\u0432\u0430\u043D\u043D\u044F\u0020\u0441\u043F\u0438\u0441\u043A\u043E\u043C\u0020\u043F\u043E\u043A\u0443\u043F\u043E\u043A\u0020\u0434\u043B\u044F\u0020\u0437\u0432\u0438\u0447\u043A\u0438
@@ -281,6 +288,7 @@ greenCity.sidebar.habits.facts=\u0424\u0430\u043A\u0442\u0438 \u043F\u0440\u043E
 greenCity.sidebar.habits.advice=\u041F\u043E\u0440\u0430\u0434\u0438 \u0449\u043E\u0434\u043E \u0417\u0432\u0438\u0447\u043A\u0438
 greenCity.sidebar.habits.shoppingList=\u0421\u043F\u0438\u0441\u043E\u043A \u041F\u043E\u043A\u0443\u043F\u043E\u043A
 greenCity.sidebar.econews=\u0415\u043A\u043E \u041D\u043E\u0432\u0438\u043D\u0438
+greenCity.sidebar.events=\u041F\u043E\u0434\u0456\u0457
 greenCity.sidebar.tags=\u0422\u0435\u0433\u0438
 greenCity.sidebar.ecoPlaces=\u0415\u043A\u043E \u041C\u0456\u0441\u0446\u044F
 greenCity.sidebar.ratings=\u0420\u0435\u0439\u0442\u0438\u043D\u0433\u0438
