add time column and format date and time in eco news management

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -71,6 +71,7 @@ greenCity.pages.table.author=Author
 greenCity.pages.table.text=Text
 greenCity.pages.table.image=Image
 greenCity.pages.table.date=Date
+greenCity.pages.table.time=Time
 greenCity.pages.table.tags=Tags
 greenCity.pages.table.likes=Likes
 greenCity.pages.table.dislikes=Dislikes
