--- a/core/src/main/resources/messages_uk.properties
+++ b/core/src/main/resources/messages_uk.properties
@@ -74,6 +74,7 @@ greenCity.pages.table.author=\u0410\u0432\u0442\u043e\u0440
 greenCity.pages.table.text=\u0422\u0435\u043a\u0441\u0442
 greenCity.pages.table.image=\u0417\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u043d\u044f
 greenCity.pages.table.date=\u0414\u0430\u0442\u0430
+greenCity.pages.table.time=\u0427\u0430\u0441
 greenCity.pages.table.tags=\u0422\u0435\u0433\u0438
 greenCity.pages.table.title.translations=\u041F\u0435\u0440\u0435\u043A\u043B\u0430\u0434\u0438\u0020\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043A\u0456\u0432
 greenCity.pages.table.image.path=\u0428\u043B\u044F\u0445\u0020\u0434\u043E\u0020\u0437\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u043D\u044F
