update front-end, add functions for sorting and search

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -98,6 +98,8 @@ greenCity.pages.table.back=Back
 greenCity.pages.table.visibility=Visibility
 greenCity.pages.table.visible=Visible
 greenCity.pages.table.hidden=Hidden
+greenCity.pages.table.ascending=Ascending
+greenCity.pages.table.descending=Descending
 
 greenCity.pages.table.connection=Connection
 greenCity.pages.table.event.name=Event Name
@@ -144,6 +146,7 @@ greenCity.pages.popup.hide.h2=Are you sure you want to hide this Record?
 greenCity.pages.popup.show.h2=Are you sure you want to make visible this Record?
 greenCity.pages.popup.language.code=Language Code
 greenCity.pages.popup.cancel.=Cancel
+greenCity.pages.popup.apply.=Apply
 greenCity.pages.popup.add.=Add
 greenCity.pages.popup.save.=Save
 greenCity.pages.popup.save.changes=Save changes
