set sending data from front-end

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -138,6 +138,7 @@ greenCity.pages.table.startDate=Start date
 greenCity.pages.table.endDate=End date
 greenCity.pages.table.ready=Ready
 greenCity.pages.table.location=Location
+greenCity.pages.table.dateRange=Date Range
 greenCity.pages.popup.delete.all.h=Delete all selected
 greenCity.pages.popup.delete.all.h1=Are you sure you want to delete these Records?
 greenCity.pages.popup.delete.all.h2=This action cannot be undone.
