eco news management update: controller, serviceImpl, tags translation

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -100,6 +100,7 @@ greenCity.pages.table.visible=Visible
 greenCity.pages.table.hidden=Hidden
 greenCity.pages.table.ascending=Ascending
 greenCity.pages.table.descending=Descending
+greenCity.pages.table.noTags=No Tags
 
 greenCity.pages.table.connection=Connection
 greenCity.pages.table.event.name=Event Name
