admin can edit event

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -154,6 +154,7 @@ greenCity.pages.popup.language.code=Language Code
 greenCity.pages.popup.cancel.=Cancel
 greenCity.pages.popup.goback.=Go Back
 greenCity.pages.popup.add.=Add
+greenCity.pages.popup.update.=Update
 greenCity.pages.popup.save.=Save
 greenCity.pages.popup.preview.= Preview
 greenCity.pages.popup.save.changes=Save changes
@@ -191,6 +192,7 @@ greenCity.events.page.h=Manage Events
 greenCity.events.page.add.event=Add Event
 greenCity.events.page.delete.event=Delete Event
 greenCity.events.page.edit.event=Edit Event
+greenCity.events.page.update.event=Update Event
 /*userspage*/
 greenCity.user.page.h=Manager Page
 greenCity.user.page.add.user=Add User
