Admin management add delete edit events (#7456)
* Add pagination to management_events.html.

* Change "Add Event" button to look like on other pages

* Add translation for text on event page

* Add translation for "Events" on sidebar

* Delete messages_ru.properties

* change thead to match other pages
change dropdown with amount of items on page

* change uk texts for footer friends, about us, ubs courier due to invalid decoding

* separate id and checkbox

* Move modal windows from management_events.html to fragments/modals

* Complete create event page

* Add messages.properties

* Move js and css to separate files

* change application props

* Add tests

* run surefire

* complete delete functionality for admin

* add test

* formatter and checkstyle

* admin can edit event

* small refactor

* add tests

* Delete files

* issues fix

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -95,6 +95,15 @@ greenCity.pages.table.icon=Icon
 greenCity.pages.table.lang=Lang
 greenCity.pages.table.complexity=Complexity
 greenCity.pages.table.back=Back
+
+greenCity.pages.table.uploadPictures=Upload PNG or JPG only. File size should be less than 10MB
+greenCity.pages.table.initiativeType=Initiative type
+greenCity.pages.table.eventType=Event type
+greenCity.pages.table.open=Open
+greenCity.pages.table.closed=Closed
+greenCity.pages.table.environmental=Environment
+greenCity.pages.table.social=Social
+greenCity.pages.table.economic=Economic
 greenCity.pages.table.visibility=Visibility
 greenCity.pages.table.visible=Visible
 greenCity.pages.table.hidden=Hidden
@@ -144,8 +153,11 @@ greenCity.pages.popup.hide.h2=Are you sure you want to hide this Record?
 greenCity.pages.popup.show.h2=Are you sure you want to make visible this Record?
 greenCity.pages.popup.language.code=Language Code
 greenCity.pages.popup.cancel.=Cancel
+greenCity.pages.popup.goback.=Go Back
 greenCity.pages.popup.add.=Add
+greenCity.pages.popup.update.=Update
 greenCity.pages.popup.save.=Save
+greenCity.pages.popup.preview.= Preview
 greenCity.pages.popup.save.changes=Save changes
 greenCity.pages.popup.hidden.EcoNews=This Eco News is hidden and is not visible for users.
 /*paginationpages*/
@@ -181,6 +193,7 @@ greenCity.events.page.h=Manage Events
 greenCity.events.page.add.event=Add Event
 greenCity.events.page.delete.event=Delete Event
 greenCity.events.page.edit.event=Edit Event
+greenCity.events.page.update.event=Update Event
 /*userspage*/
 greenCity.user.page.h=Manager Page
 greenCity.user.page.add.user=Add User
@@ -326,3 +339,11 @@ greenCity.sidebar.statistics.ecoNews=Eco News Statistic
 greenCity.sidebar.statistics.ecoPlaces=Eco Places Statistic
 greenCity.sidebar.statistics.achievements=Achievements Statistic
 greenCity.sidebar.statistics.tags=Tags statistic of Entities
+
+
+greenCity.imageUpload.proposed=Proposed Images
+greenCity.imageUpload.preview=Preview
+
+greenCity.event.invitees=Invitees
+greenCity.event.invitees.all=All
+greenCity.event.invitees.friends=Friends
