--- a/core/src/main/resources/messages_ua.properties
+++ b/core/src/main/resources/messages_ua.properties
@@ -96,6 +96,7 @@ greenCity.pages.table.back=\u041D\u0430\u0437\u0430\u0434
 greenCity.pages.table.uploadPictures=\u0417\u0430\u0432\u0430\u043D\u0442\u0430\u0436\u0443\u0439\u0442\u0435 \u043B\u0438\u0448\u0435 PNG \u0430\u0431\u043E JPG. \u0420\u043E\u0437\u043C\u0456\u0440 \u0444\u0430\u0439\u043B\u0443 \u043C\u0430\u0454 \u0431\u0443\u0442\u0438 \u043C\u0435\u043D\u0448\u0438\u043C\u044B \u043D\u0456\u0436 10MB
 greenCity.pages.table.initiativeType=\u0422\u0438\u043F \u0438\u043D\u0438\u0446\u0438\u0430\u0442\u0438\u0432\u0430
 greenCity.pages.table.eventType=\u0422\u0438\u043f\u0020\u0437\u0430\u0445\u043e\u0434\u0443
+greenCity.pages.table.eventTitle=\u041d\u0430\u0437\u0432\u0430 \u043f\u043e\u0434\u0456\u0457
 greenCity.pages.table.open=\u0412\u0456\u0434\u043a\u0440\u0438\u0442\u0438\u0439
 greenCity.pages.table.closed=\u0417\u0430\u043a\u0440\u0438\u0442\u0438\u0439
 greenCity.pages.table.environmental=\u0415\u043A\u043E\u043B\u043E\u0433\u0438\u0447\u043D\u0438\u0439
