Added new features to frontend part

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -45,6 +45,7 @@ greenCity.pages.filter=Filter
 greenCity.pages.delete=Delete
 greenCity.pages.edit=Edit
 greenCity.pages.seeAll=See all
+
 greenCity.pages.hide=Hide
 greenCity.pages.show=Make Visible
 greenCity.pages.table.id=ID
@@ -157,6 +158,7 @@ greenCity.pages.popup.show.h2=Are you sure you want to make visible this Record?
 greenCity.pages.popup.language.code=Language Code
 greenCity.pages.popup.cancel.=Cancel
 greenCity.pages.popup.add.=Add
+greenCity.pages.popup.apply.=Apply
 greenCity.pages.popup.save.=Save
 greenCity.pages.popup.save.changes=Save changes
 greenCity.pages.popup.hidden.EcoNews=This Eco News is hidden and is not visible for users.
