admin view and sort events (#7492)
* admin view and sort events

* increasing test coverage

* rename controller to be in singular form

--- a/core/src/main/resources/messages.properties
+++ b/core/src/main/resources/messages.properties
@@ -96,11 +96,13 @@ greenCity.pages.table.icon=Icon
 greenCity.pages.table.lang=Lang
 greenCity.pages.table.complexity=Complexity
 greenCity.pages.table.back=Back
+greenCity.pages.table.eventTime=Event time
 
 greenCity.pages.table.uploadPictures=Upload PNG or JPG only. File size should be less than 10MB
 greenCity.pages.table.initiativeType=Initiative type
 greenCity.pages.table.eventType=Event type
 greenCity.pages.table.open=Open
+greenCity.pages.table.eventTitle=Event title
 greenCity.pages.table.closed=Closed
 greenCity.pages.table.environmental=Environment
 greenCity.pages.table.social=Social
@@ -161,7 +163,11 @@ greenCity.pages.popup.add.=Add
 greenCity.pages.popup.apply.=Apply
 greenCity.pages.popup.save.=Save
 greenCity.pages.popup.save.changes=Save changes
+greenCity.pages.popup.reset.=Reset
 greenCity.pages.popup.hidden.EcoNews=This Eco News is hidden and is not visible for users.
+greenCity.pages.popup.goback.=Go Back
+greenCity.pages.popup.update.=Update
+greenCity.pages.popup.preview.= Preview
 /*paginationpages*/
 greenCity.page.paging.show=Showing
 greenCity.page.paging.out.of=out of
@@ -195,6 +201,12 @@ greenCity.events.page.h=Manage Events
 greenCity.events.page.add.event=Add Event
 greenCity.events.page.delete.event=Delete Event
 greenCity.events.page.edit.event=Edit Event
+greenCity.events.page.update.event=Update Event
+greenCity.imageUpload.proposed=Proposed Images
+greenCity.imageUpload.preview=Preview
+greenCity.event.invitees=Invitees
+greenCity.event.invitees.all=All
+greenCity.event.invitees.friends=Friends
 /*userspage*/
 greenCity.user.page.h=Manager Page
 greenCity.user.page.add.user=Add User
